--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              daminisatya 
+title:              Damini Satya
 bio:                I'm that organism who converts coffee into software.
 description:        "I'm that organism who converts coffee into software."
 reading_time:       true
